# psychic-waddle

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  PLAN.md  README.md  compose.yaml  pyproject.toml
config/: intent-profiles.json
docs/: answer-generation.md  answer-policy.md  api.md  architecture.md  backend-configuration.md  design-decisions.md  ingestion.md  intent-catalog.md  knowledge-input-format.md  knowledge-maintenance.md  knowledge-model.md  m9-follow-up-review.md  m9-remediation-closure.md  provider-contract.md  public-deployment.md  question-review.md  release-v0.1.0.md  release-v0.2.0.md  retrieval.md  runtime.md  server-setup.md
knowledge/: README.md  profile.json
migrations/: 0001_knowledge_schema.sql  0002_question_events.sql  0003_embedding_content_hash.sql  README.md
tests/: intent_catalog_helpers.py  test_answer_generation_acceptance.py  test_answer_generation_contract.py  test_answer_insufficiency.py  test_answer_policy.py  test_api_composition.py  test_api_endpoints.py  test_api_readiness.py  test_api_schemas.py  test_chat_service.py  test_cli.py  test_config.py  test_database_connection.py  test_embedding_indexing.py  test_grounded_answer_generation.py  test_intent_catalog.py  test_intent_semantic_evaluation.py  test_knowledge_ingestion.py  test_knowledge_input.py  test_knowledge_schema.py  test_knowledge_validation.py  test_llama_cpp_provider.py  test_offline_ingestion_db.py  test_ollama_provider.py  test_openai_compatible_provider.py  test_postgres_retrieval.py  test_provider_contract.py  test_question_review.py  (+11 more)
(+89 files in other folders)
