[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-rag-assistant"
version = "0.1.0"
description = "Recruiter-facing portfolio RAG assistant."
readme = "PLAN.md"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
