[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-rag-assistant"
version = "0.2.0"
description = "Recruiter-facing portfolio RAG assistant."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28.1,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "rich>=15.0,<16.0",
    "textual>=8.2,<9.0",
    "uvicorn>=0.30,<1.0",
]

[project.scripts]
portfolio-rag-assistant = "portfolio_rag_assistant.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
